0.6 - ...
* Numerous makefile fixes
* Fixed cbtutils.conf
* Removed black background from most entries

0.5 - Apr 26 2023
* Compilation fixes for mold linker
* Integrated support for crunchgen-ng
* Fixed libbio and lib9 linking
* Added a makefile install rule
* Fixed fortune/datfiles makefile

0.4 - Apr 19 2023
* Added proper man page for unstr
* Fixed broken references and inaccuracies in some man pages

0.3 - Apr 6 2023
* Removed nbperf
* Added support for any C compiler, instead of just gcc
* Makefile improvements for fortune
* Minor cleanup
* Removed astro
* Removed bcat executable from libbio
* Removed pbd
* Removed pom
* Fixed units not being built
* Removed worms
* Added manpages for libbio and strfile
* Added unstr

0.2 - Mar 24 2023
* Added bs
* Added grdc
* Added number
* Added pom
* Added rain
* Added tetris
* Added worms
* Added a license
* Various other improvements

0.1c - Mar 17 2023
* Fixed README.md (again)

0.1b - Mar 17 2023
* Fixed README.md
* Added ChangeLog

0.1 - Mar 17 2023
* Added astro utility
* Added banner utility
* Added fortune utility
* Added freq utility
* Added lib9 library
* Added libbio library
* Added locale utility
* Added ls utility
* Added nbperf utility
* Added news utility
* Added pbd utility
* Added primes utility
* Added rs utility
* Added unicode utility
* Added units utility
* Added unutf utility