@@ -1,6 +1,6 @@
-srcdirs banner bs fortune/fortune fortune/strfile fortune/unstr freq grdc locale ls news number primes rs tetris unicode units unutf
+srcdirs banner bs fortune/fortune fortune/strfile fortune/unstr freq grdc locale ls news number primes rs tetris unicode units unutf getent
 
-progs banner bs fortune strfile unstr freq grdc locale ls news number primes rs tetris unicode units unutf
+progs banner bs fortune strfile unstr freq grdc locale ls news number primes rs tetris unicode units unutf getent
 
 special banner objpaths banner/banner.o
 special bs objpaths bs/bs.o
@@ -19,6 +19,7 @@ special tetris objpaths tetris/tetris.o tetris/input.o tetris/scores.o tetris/sc
 special unicode objpaths unicode/unicode.o
 special units objpaths units/units.o
 special unutf objpaths unutf/unutf.o
+special getent objpaths getent/getent.o
 
 libdirs libbio lib9
 libs -lncursestw -lbsd -lmd -lm -lbio -l9 -lfts
